# webapp_mangetamain

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.json
src/webapp_mangetamain/: __about__.py  filter_data.py  ingredient_data_process.py  ingredients_analyzer.py  interface.py  load_config.py  local_food.py  nutriscore_analyzer.py  recipe_complexity.py  tag_analyzer.py
src/webapp_mangetamain/utils/: filter_data.py  ingredient_data_process.py
tests/: test_nutriscore_analyzer.py  test_tags_analyzer.py
