[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webapp-mangetamain"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ambroise012", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests==2.32.5",
  "flask==3.1.2",
  "pytest==8.4.2",
  "streamlit==1.50.0",
  "matplotlib==3.10.6",
  "seaborn==0.13.2",
  "pandas==2.3.3",
  "numpy==2.2.6"
]

[project.scripts]
webapp = "webapp_mangetamain.interface:main"

[tool.hatch.envs.default.scripts]
webapp = "streamlit run src/webapp_mangetamain/interface.py"

[project.urls]
Documentation = "https://github.com/Ambroise012/webapp-mangetamain#readme"
Issues = "https://github.com/Ambroise012/webapp-mangetamain/issues"
Source = "https://github.com/Ambroise012/webapp-mangetamain"

[tool.hatch.version]
path = "src/webapp_mangetamain/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/webapp_mangetamain tests}"

[tool.coverage.run]
source_pkgs = ["webapp_mangetamain", "tests"]
branch = true
parallel = true
omit = [
  "src/webapp_mangetamain/__about__.py",
]

[tool.coverage.paths]
webapp_mangetamain = ["src/webapp_mangetamain", "*/webapp-mangetamain/src/webapp_mangetamain"]
tests = ["tests", "*/webapp-mangetamain/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
